Update ProductServiceImpl.java